--- a/autocomplete-app/index.html
+++ b/autocomplete-app/index.html
@@ -8,6 +8,24 @@
   <title>State Capital AutoComplete</title>
 </head>
 <body>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-6 m-auto">
+        <h3 class="text-center mb-3">
+          State Capital Lookup
+        </h3>
+        <div class="form-group">
+          <input
+          type="text"
+          id="search"
+          class="form-control form-control-lg"
+          placeholder="Enter state or capital"
+          />
+        </div>
+        <div id="match-list"></div>
+      </div>
+    </div>
+  </div>
 </body>
 <script src='script.js'></script>
 </html>
